--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -10,12 +10,19 @@ Senda
 {% endblock volver %}
 
 {% block navbtn %}
+{% if user.groups.all.0.name != "Empleado" %}
 <a href="{% url 'servicios:crearServicio' %}" class="btn btn-primary me-3"> 
   <i class="bi bi-plus"></i> Crear Servicio
 </a>
+{% endif %}
 {% endblock %}
 
 {% block cmain %}
+{% if user.groups.all.0.name == "Empleado" %}
+
+
+
+{% else %}
 
 <div class="col-12 col-md-6 d-flex">
     <div class="card flex-fill border-0 illustration">
@@ -38,7 +45,6 @@ Senda
     </div>
   </div>
 
-  {% if perms.core%}
   <div class="col-12 col-md-6 d-flex">
     <div class="card flex-fill border-0">
       <div class="card-body py-4">
@@ -55,7 +61,6 @@ Senda
         </div>
       </div>
     </div>
-    {% endif %}
   </div>
 
   <div class="col-12 col-md-6 w-100">
@@ -77,7 +82,7 @@ Senda
       </div>
     </div>
   </div>
-
+  {% endif %}
   {% block extrajs %}
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
